--- a/manifest.json
+++ b/manifest.json
@@ -24,7 +24,28 @@
                 "mac": "Alt+T"
             },
             "description": "Load Facebook in a new tab"
-        }  
+        },
+        "load_dictionary":{
+            "suggested_key": {
+                "default": "Alt+C",
+                "mac": "Alt+C"
+            },
+            "description": "Load Dictionary in a new tab"
+        },
+        "load_gmail":{
+            "suggested_key":{
+                "default": "Alt+G",
+                "mac": "Alt+G"
+            },
+            "description": "Load Gmail in a new tab"
+        }
+        // "load_jobs":{
+        //     "suggested_key":{
+        //         "default": "Alt+J",
+        //         "mac": "Alt+J"
+        //     },
+        //     "description": "Load JournalismJobs in a new tab"
+        // } 
     },
     "background": {
         "scripts": ["background.js"],
