--- a/manifest.json
+++ b/manifest.json
@@ -5,9 +5,16 @@
     "version": "0.1",
     "author": "Kia Farhang",
     "permissions": [
+        "activeTab",
         "tabs",
+        "storage",
         "*://*/*"
     ],
+
+    "options_ui":{
+        "page": "options.html",
+        "chrome_style": true
+    },
 
     "browser_action": {
         "default_icon": {
